--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "keycloak",
     "oauth",
     "oauth2.0",
-    "authentication"
+    "authentication",
+    "koa"
   ],
   "files": [
     "example",
@@ -27,47 +28,25 @@
     "uuid.js"
   ],
   "author": {
-    "name": "Red Hat, Inc.",
-    "url": "http://keycloak.org"
+    "name": "xrian",
+    "email": "778811xxx@163.com"
   },
   "license": "Apache-2.0",
   "dependencies": {
     "jwk-to-pem": "^2.0.0"
   },
-  "devDependencies": {
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "server-destroy": "^1.0.1",
-    "istanbul": "^0.4.5",
-    "ink-docstrap": "^1.1.4",
-    "coveralls": "^3.0.1",
-    "jsdoc": "^3.4.3",
-    "jshint": "^2.9.5",
-    "semistandard": "^9.2.1",
-    "tape": "^4.6.3",
-    "tape-catch": "^1.0.6",
-    "blue-tape": "^1.0.0",
-    "rsa-compat": "^1.2.7",
-    "keycloak-admin-client": "bucharest-gold/keycloak-admin-client",
-    "keycloak-request-token": "^0.1.0",
-    "hogan-express": "^0.5.2",
-    "selenium-webdriver": "^2.52.0",
-    "phantomjs-prebuilt": "^2.1.14",
-    "body-parser": "^1.13.3",
-    "roi": "^0.15.0",
-    "nock": "^9.0.2"
-  },
+  "devDependencies": {},
   "semistandard": {
     "ignore": [
       "**/phantomjs*/"
     ]
   },
   "engines": {
-    "node": ">=4.6.2"
+    "node": ">=8.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/keycloak/keycloak-nodejs-connect.git"
+    "url": "https://github.com/xrian/keycloak-koa-connect.git"
   },
-  "bugs": "https://github.com/keycloak/keycloak-nodejs-connect/issues"
+  "bugs": "https://github.com/xrian/keycloak-koa-connect/issues"
 }
