--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "koa"
   ],
   "author": "xrian",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "@types/node": "^10.5.7",
     "jwk-to-pem": "^2.0.0",
