--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/node": "^10.5.7",
-    "jwk-to-pem": "^2.0.0",
-    "koa-session": "^5.8.2"
+    "jwk-to-pem": "^2.0.0"
   },
   "devDependencies": {
     "koa": "^2.5.2",
     "ts-node": "^7.0.0",
     "tslint": "~5.10.0",
-    "typescript": "~2.9.2"
+    "typescript": "~2.9.2",
+    "koa-router": "^7.4.0",
+    "koa-session": "^5.8.2"
   },
   "repository": {
     "type": "git",
